welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:5: error: Missing closing brace `}' assumed here
def isFacingTrail(c:Color): Boolean = { 
^SlugSnail:5: error: expected class or object definition
def isFacingTrail(c:Color): Boolean = { 
^